# construction

./: .gitignore  .vercelignore  CONFIG.md  README.md  package-lock.json  package.json  vercel.json
apps/sketchup-extension/: README.md  jiancai_space.rb  manifest.json
apps/sketchup-extension/jiancai_space/: bridge_client.rb  component_library.rb  dimension_builder.rb  errors.rb  exporter.rb  geometry.rb  importer.rb  loader.rb  main.rb  model_builder.rb  protocol_adapter.rb  scene_builder.rb  ui.rb  validator.rb  version.rb
apps/sketchup-extension/jiancai_space/components/: manifest.json
apps/sketchup-extension/test/: pure_logic_test.rb  test_helper.rb
apps/vision-worker/: Dockerfile  README.md  pyproject.toml  requirements-base.txt  requirements-dev.txt  requirements-ocr.txt
apps/vision-worker/examples/: job-request.sample.json
apps/vision-worker/vision_worker/: __init__.py  classification.py  image_processing.py  main.py  models.py  ocr.py  pipeline.py
apps/web/: .env.example  .vercelignore  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  tsconfig.json  vercel.json  vitest.config.ts
apps/web/src/: proxy.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/lib/: index.ts
docs/sketchup-integration/: README.md  acceptance-demo.md  bridge-security.md  component-library-and-sku.md  development.md  error-recovery.md  installation-and-usage.md  json-import.md  sync-updates.md  troubleshooting.md
templates/layout/: README.md  template-manifest.example.json
templates/layout/A03023/: README.md  handoff-manifest.json
(+140 files in other folders)
