[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-worker"
version = "1.0.0"
requires-python = ">=3.11,<3.12"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements-base.txt"] }

[tool.setuptools.packages.find]
include = ["vision_worker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
